# sunspec_gateway

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  config.toml  config.yaml  docker-compose.yaml  enum.rs  justfile  pwrcell.toml  test_api.sh  ui
.github/workflows/: run_tests.yml
changelog.d/: 20231003_021547_pete.grace_peter_grace_value_minmax.md
dashboards/: .gitignore  glance.yaml
docs/: CONFIGURATION.md
kustomize/: config.yaml  deployment.yaml  kustomization.yaml  ns.yaml  podmonitor.yaml  pvc.yaml  svcacct.yaml
migrations/: 20230925001657_point_history.sql  20251211154408_add_bitfield_history.sql
models/: manifest.xml  model_64205.json  model_64206.json  model_64207.json  model_64269.json  model_64412.json
models/generac/: smdx_64205.xml  smdx_64206.xml  smdx_64207.xml
src/: config_structs.rs  consts.rs  date_serializer.rs  ipc.rs  main.rs  metrics.rs  monitored_point.rs  mqtt_connection.rs  mqtt_poll.rs  payload.rs  poll.rs  pwrcell_unit.rs  routes.rs  state.rs  state_mgmt.rs  sunspec_poll.rs  sunspec_unit.rs
src/auth/: data.rs  error_handler.rs  mod.rs  token_extractor.rs  token_management.rs  token_middleware.rs
src/cli_args/: mod.rs
src/modules/: mod.rs  status_structs.rs
src/modules/controls/: mod.rs
src/modules/dashboard/: mod.rs
src/modules/points/: mod.rs
src/modules/settings/: mod.rs
src/modules/users/: mod.rs
tests/: test_reads.rs
tools/: stats.so.arm64
ui-src/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui-src/src/: App.tsx
ui-src/src/components/: ErrorMessage.tsx  FilterPanel.tsx  LoadingSpinner.tsx  ModelCard.tsx  ModelSettings.tsx  Navbar.tsx  PointCard.tsx  PointsTable.tsx  SearchBar.tsx  Sidebar.tsx  StatsCard.tsx  StatusBar.tsx  UnitCard.tsx  YamlModal.tsx
ui-src/src/context/: ThemeContext.tsx
ui-src/src/pages/: Controls.tsx  Dashboard.tsx  Devices.tsx  PointsBrowser.tsx  Settings.tsx
ui-src/src/services/: api.ts
ui-src/src/types/: api.ts
