[package]
name = "sunspec_gateway"
version = "0.2.0"
edition = "2021"
authors = ["Peter Grace"]
description = "Translate sunspec-compliant equipment metrics into MQTT"
repository = "https://github.com/PeterGrace/sunspec_gateway"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["sync", "time", "tracing", "macros", "rt-multi-thread"] }
clap-verbosity-flag = "2.0.1"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["time"]}
tracing-log = "0.1.3"
clap = { version = "4.3.24", features = ["derive", "env"] }
config = { version = "0.13.3", features = ["yaml"] }
lazy_static = "1.4.0"
anyhow = "1.0.75"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.2"
futures = "0.3.28"
rumqttc = "0.22.0"
serde = {version="1.0.185", features=["derive"]}
serde_json = "1.0.105"
serde_yaml = "=0.8.26"
prometheus = {version = "0.13.3", features=["process"]}
#sunspec_rs = "0.3.1"
sunspec_rs = {path = "/home/pgrace/repos/sunspec_rs"}
console-subscriber = "0.1.10"
chrono = "0.4.28"
rand = "0.8.5"
crossterm = "0.27.0"
thiserror = "1.0.48"
sqlx = {version = "0.7.1", features = ["sqlite", "runtime-tokio-rustls"]}
opentelemetry = {version="0.20.0",features = ["trace", "rt-tokio", "metrics", "logs_level_enabled"]}
tracing-opentelemetry = "0.21.0"
opentelemetry-otlp = {version="0.13.0", features=["http-proto","reqwest-rustls","reqwest-client"]}
opentelemetry-semantic-conventions = "0.12.0"
url = "2.4.1"
num-traits = "0.2.16"
actix-web = {version="4.3.1", features=["rustls"]}
actix-web-prom = "0.6.0"
metrics-process = "1.0.12"
ctrlc = "3.4.1"