[package]
name = "sunspec_gateway"
version = "0.8.11"
edition = "2021"
authors = ["Peter Grace"]
description = "Translate sunspec-compliant equipment metrics into MQTT"
repository = "https://github.com/PeterGrace/sunspec_gateway"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["sync", "time", "tracing", "macros", "rt-multi-thread"] }
clap-verbosity-flag = "2.0.1"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["time"]}
tracing-log = "0.1.3"
clap = { version = "4.3.24", features = ["derive", "env"] }
lazy_static = "1.4.0"
anyhow = "1.0.75"
strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
futures = "0.3.28"
rumqttc = "0.22.0"
serde = {version="1.0.185", features=["derive"]}
serde_json = "1.0.105"
serde_yaml = "=0.8.26"
prometheus = {version = "0.13.3", features=["process"]}
#sunspec_rs = { path="../sunspec_rs" }
sunspec_rs = { version = "0.10.4" }
console-subscriber = "0.1.10"
chrono = "0.4.28"
rand = "0.8.5"
thiserror = "1.0.48"
sqlx = {version = "0.7.1", features = ["sqlite", "runtime-tokio-rustls"]}
opentelemetry = {version="0.20.0",features = ["trace", "rt-tokio", "metrics", "logs_level_enabled"]}
tracing-opentelemetry = "0.21.0"
opentelemetry-jaeger = "0.22.0"
opentelemetry-jaeger-propagator = "0.28.0"
opentelemetry-otlp = {version="0.13.0", features=["http-proto","reqwest-rustls","reqwest-client"]}
opentelemetry-semantic-conventions = "0.12.0"
url = "2.4.1"
num-traits = "0.2.16"
ctrlc = "3.4.1"
uuid = { version = "1.15.1", features = ["v4"] }
utoipa = { version = "5.3.1", features = ["macros","chrono","axum_extras"] }
openssl = {  version = "0.10.72", features=["vendored"] }
axum = { version = "0.8.4", features = ["http2", "macros"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
tower-http = { version = "0.6.4", features = ["cors", "fs"] }
jsonwebtoken = "9.3.1"
async-trait = "0.1.88"
tower-sessions = "0.14.0"
cached = { version = "0.55.1", features = ["async", "tokio"] }
reqwest = { version = "0.12.14", features = ["json"] }
